--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "^3.3.0"
   },
   "devDependencies": {
-    "@testing-library/react": "10.4.5"
+    "@testing-library/react": "10.4.5",
+    "react-test-renderer": "^17.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
